Fix that dumb case mistake in many .fnt files.
I had "yOffset" when it should have been "yoffset", and it has been this way in some fonts (those generated by Glamer) for years! It wasn't noticed by libGDX thankfully, but it is an issue for textramode and SquidSquad's SquidGlyph.